@@ -1,3 +1,7 @@
+Mar 29, 2005
+
+  * Fix toplevel after changing to library.
+
 Mar 3, 2005
 
   * Updated DC schemas from http://dublincore.org/schemas/rdfs/
